# GenericHardware

./: README.md
devboard-stm32g030f6p6/: devboard-stm32g030f6p6-cache.lib  devboard-stm32g030f6p6.kicad_pcb  devboard-stm32g030f6p6.pro  devboard-stm32g030f6p6.sch  fp-lib-table  sym-lib-table
devboard-stm32g030f6p6/lib/devboard-stm32g030f6p6.pretty/: button_ts_1092s_b3d2_g.kicad_mod  osc_ssd_7F32000E12UCG.kicad_mod
devboard-stm32g030f6p6/lib/stm32/: eec.dcm  eec.lib
devboard-stm32g030f6p6/lib/stm32/eec.models/: STMicroelectronics_-_STM32G030F6P6.step
devboard-stm32g030f6p6/lib/stm32/eec.pretty/: STMicroelectronics-TSSOP20-YA-0-3-IPC_A.kicad_mod  STMicroelectronics-TSSOP20-YA-0-3-IPC_B.kicad_mod  STMicroelectronics-TSSOP20-YA-0-3-IPC_C.kicad_mod  STMicroelectronics-TSSOP20-YA-0-3-MFG.kicad_mod
devboard-stm32g030f6p6/lib/usb/MICROXNJ.pretty/: SHOUHAN_MICROXNJ.kicad_mod
devboard-stm32g030f6p6/release/v1/: bom.csv  pos.csv
devboard-stm32g030f6p6/release/v1/gerber/: devboard-stm32g030f6p6-B_Cu.gbl  devboard-stm32g030f6p6-B_Mask.gbs  devboard-stm32g030f6p6-B_Paste.gbp  devboard-stm32g030f6p6-B_SilkS.gbo  devboard-stm32g030f6p6-Edge_Cuts.gm1  devboard-stm32g030f6p6-F_Cu.gtl  devboard-stm32g030f6p6-F_Mask.gts  devboard-stm32g030f6p6-F_Paste.gtp  devboard-stm32g030f6p6-F_SilkS.gto  devboard-stm32g030f6p6-In1_Cu.g2  devboard-stm32g030f6p6-In2_Cu.g3  devboard-stm32g030f6p6-NPTH-drl_map.gbr  devboard-stm32g030f6p6-NPTH.drl  devboard-stm32g030f6p6-PTH-drl_map.gbr  devboard-stm32g030f6p6-PTH.drl
devboard-stm32g030f6p6/rust-firmware-hello-world/: Cargo.toml
devboard-stm32g030f6p6/rust-firmware-hello-world/src/: lib.rs
devboard-stm32g030f6p6/rust-firmware-hello-world/tests/: integration.rs
